# furrow

./: .gitignore  BENCHMARKS.md  Cargo.toml  DISTRIBUTED_AGENT_WORKSPACE_SPEC.md  LICENSE  README.md  RUNNERS_DX_AND_COMMERCIAL_SPEC.md
.github/workflows/: ci.yml
benches/: engine.rs
demo/: Dockerfile.two-machine  agent-disaster.sh  conflict-radar.sh  find-regression.sh  five-agent-scale.sh  mission-control.sh  parallel-agent-forks.sh  risky-command.sh  shrink-cache.sh  two-machine-network.sh  two-machine-sync.sh
docs/: README.md  performance.md  product.md
docs/specs/: 01-working-state.md  02-distributed-runtime.md  03-parallel-universes.md
src/: budget.rs  bundle.rs  catalog.rs  chunker.rs  claims.rs  content_class.rs  coord.rs  estimate.rs  fork.rs  gc.rs  lib.rs  main.rs  mcp.rs  merge.rs  model.rs  path_index.rs  policy.rs  radar.rs  refs.rs  remote.rs  remote_crypto.rs  repository.rs  retention.rs  s3_remote.rs  self_write.rs  shrink.rs  sorted_dir.rs  sqlite_adapter.rs  store.rs  sync.rs  tree.rs  ui.rs  universe.rs  watcher.rs
tests/: cli.rs  ui.rs
ui/: THIRD_PARTY_NOTICES.md  app.css  app.js  index.html
