[package]
name = "agit"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Local-first working-state snapshots for agentic development"
license = "Apache-2.0"
repository = "https://github.com/agent-field/agit"
readme = "README.md"
keywords = ["snapshot", "backup", "agents", "filesystem", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "=1.0.95"
blake3 = "=1.5.5"
chacha20poly1305 = "=0.10.1"
clap = { version = "=4.5.31", features = ["derive"] }
directories = "=5.0.1"
fs2 = "=0.4.3"
filetime = "=0.2.25"
hex = "=0.4.3"
getrandom = "=0.2.17"
libc = "=0.2.169"
notify = "=7.0.0"
rusqlite = { version = "=0.32.1", features = ["backup", "bundled"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_bytes = "=0.11.15"
serde_json = "=1.0.138"
tempfile = "=3.15.0"
xattr = "=1.3.1"
zeroize = "=1.8.1"

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.3"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
